fixed vertical overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,4 +44,9 @@ body{
   pointer-events: all;
 }
   }
-  
+  .home{
+    min-height: 100vh;
+    min-height: 100dvh;
+    display: grid;
+    grid-template-rows: auto 1fr;
+  }
